  - Added a Buttplug.io device client to connect to toys via Initface.
- Added an event communication mechanism to the script interface via the PlayerEventCommunicator.
  This lets a Script communicate and exchange data with the Layout.
- The PlayerThread can now spawn and kill threads with the "runAsynch" and "kill" methods
  respectively.

Changes:
- Changed debug-view to a layout with splitter to support resizing the debugger.
- Updated the Script Editor with a lot of new features:
  - Better code folding.
  - Color coded matching of braces, brackets and paratheses.
  - Highlighting of selected word.
  - Toolbar at the bottom.
  - Better input completion.
- Scenes now allow to select an existing Script Resource instead of having to create
  a new one.
- Script files reload without a user prompt if changed externally and not changed in 
  the Editor.
- Layout / QML errors are reported in the editor.
- Enabled to remove all resources in a folder by selecting a folder of resources 
  in the view.
- Updated the PlayerMetronome to be way more reliable and precise by over-engineering the 
  <buy some apples> out of it. It should now not get out of synch even at lower 
  frame rates and high BPMs.

Fixed Bugs:
- Fixed a few UI typos.
- Fixed a crash that occured if a project was loaded that contained a resource of
  an unknown type.

=================
Version 1.3.1.0
=================

Fixed Bugs:
- Fixed an error introduced in 1.3.0 with parsing notification.show() arguments resulting
  in not starting onButton scripts in certain calls.
- Fixed a crash that occured when opening a project with an eos Script in first place
  of the Script list.
- Fixed EOS Scripts leaving the editor blank after starting a debug session.
- Fixed EOS notifications not working correctly.
- Fixed EOS Scripts not terminating after the last scene ended if there was an open
  notification running.
- Fixed some code generation overlays messing up the initial enabled state of certain 