@@ -39,7 +39,8 @@ CSequenceTextBoxRunner::~CSequenceTextBoxRunner()
 
 //----------------------------------------------------------------------------------------
 //
-void CSequenceTextBoxRunner::RunSequenceInstruction(const std::shared_ptr<SSequenceInstruction>& spInstr)
+void CSequenceTextBoxRunner::RunSequenceInstruction(const QString&,
+                                                    const std::shared_ptr<SSequenceInstruction>& spInstr)
 {
   auto pSignalEmitter = SignalEmitter<CTextBoxSignalEmitter>();
   if (const auto& spI = std::dynamic_pointer_cast<SShowTextInstruction>(spInstr);
